--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <aside class="sectionNotis_Contenedor">
         <div id="Noti1" class="Noti1">
             <div class="notisLinea">Sociales</div>
-            <a href="https://www.instagram.com/p/DP2KLV5DpqP/?igsh=MWFhM29rNzdhMnF1aw=="><img class="sectionNotiImg" src="./noti1.png" alt=""></a>
+            <a href="https://www.instagram.com/p/DP2KLV5DpqP/?igsh=MWFhM29rNzdhMnF1aw=="><img class="sectionNotiImg" src="./Noti1.png" alt=""></a>
             <h1 class="notisH1">Los nemaikai son sensaciOn en redes sociales!</h1>
             <p class="notisText">Con el festival Lunayaris, numerosos visitantes llegaron a Neo Pangea para conocer la región. Sin embargo, muchos quedaron impactados al descubrir a los Homo neoreptilis, o “Nemaikianos”. 
                 <a href="https://www.instagram.com/p/DP2KLV5DpqP/?igsh=MWFhM29rNzdhMnF1aw=="><span style="font-weight: bold; color: #B58DFF; cursor: pointer;">VER MÁS</span></a></p>
@@ -156,4 +156,5 @@
 </footer>  
 </body>
 <script src="./scripts.js"></script>
+
 </html>
